--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
@@ -12,16 +13,20 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "flowbite": "^1.4.5",
     "flowbite-react": "^0.0.20",
     "formik": "^2.2.9",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-easy-swipe": "^0.0.22",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^3.7.5",
+    "sweetalert2": "^11.4.14",
+    "sweetalert2-react-content": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
